Fix: safe DB getters; ensure socialfish row; add content block to admin index

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -105,6 +105,7 @@ function showSuccess() {
             </section>
             <!-- END BREADCRUMB-->
 
+            {% block content %}
             <!-- WELCOME-->
             <section class="welcome p-t-10">
                 <div class="container">
@@ -246,6 +247,8 @@ function showSuccess() {
                 </div>
             </section>
             <!-- END DATA TABLE-->
+
+            {% endblock %}
 
             <!-- COPYRIGHT-->
             <section class="p-t-60 p-b-20">
